Made some tweaks to Index and About pages, pictures now show on mobile correctly and in logical order.

--- a/nubian_quest/static/css/style.css
+++ b/nubian_quest/static/css/style.css
@@ -100,4 +100,8 @@ body {
   .mb-resp {
     margin-bottom: 1rem;
   }
+
+  .about-img {
+    margin-top: 0px;
+  }
 }
